<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/choose_text"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp"/>
    <Button
        android:id="@+id/btn_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_encrypt_text"/>
    <TextView
        android:id="@+id/tv_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_encrypt_text"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp"/>
    <Button
        android:id="@+id/btn_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_decrypt_text"/>
    <TextView
        android:id="@+id/tv_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_decrypt_text"/>

</LinearLayout>