<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"/>
    <EditText
        android:id="@+id/edT1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scrollbars="vertical"
        android:paddingHorizontal="10sp"
        android:gravity="bottom"
        android:hint="@string/enter_hint"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"/>

    <EditText
        android:id="@+id/edT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10sp"
        android:hint="@string/enter_shift_hint"/>
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_encrypt_return2choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_encrypt_return2choice_text" />
    </LinearLayout>

</LinearLayout>