<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"/>
    <EditText
        android:id="@+id/edT_decrypt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/edT_decrypt_hint"
        android:gravity="bottom"
        android:scrollbars="vertical"/>
    <Button
        android:id="@+id/btn_decrypt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_decrypt_return2choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_decrypt_return2choice_text" />
    </LinearLayout>

</LinearLayout>